--- a/labs/2/README
+++ b/labs/2/README
@@ -1,2 +1,2 @@
-Реализовать абстрактный класс Figure. На его основе сделать следующие
-классы: Circ, Rect, Triangle, Rhomb.
+    Реализовать абстрактный класс Figure. На его основе сделать
+следующие классы: Circ, Rect, Triangle, Rhomb.
